Complete through application_record view changes

--- a/cats_part_2/app/views/layouts/application.html.erb
+++ b/cats_part_2/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
   </head>
 
   <body>
+  <header>
+    <% if logged_in? %>
+      <%= current_user.username %>
+      <form action="<%=session_url%>" method="POST">
+        <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Log out">
+      </form>
+    <% else %>
+        <form action="<%=new_session_url%>" method="GET">
+          <input type="submit" value="Log in">
+        </form>
+    <% end %>
+  </header>
     <%= yield %>
   </body>
 </html>
