--- a/cats_part_2/app/views/cats/_req_tr.html.erb
+++ b/cats_part_2/app/views/cats/_req_tr.html.erb
@@ -1,8 +1,9 @@
 <tr>
+  <td><%= req.requester.username %></td>
   <td><%= req.start_date %></td>
   <td><%= req.end_date %></td>
   <td>
-    <% if req.pending? %>
+    <% if req.pending? && @cat.owner == current_user %>
         <form action="<%= approve_cat_rental_request_url(req) %>" method="post">
           <input
             type="hidden"
